--- a/index.html
+++ b/index.html
@@ -2,18 +2,15 @@
 <html>
 
 <head>
-<link rel="stylesheet" type="text/css" href="css/style.css"/>
+  <link rel="stylesheet" type="text/css" href="css/style.css"/>
 </head>
 <body>
-
-
-
-
-<a href="https://index.html"><img src="img/logo-taasky.png"></a>
-<hr>
-<p> Beautiful, simple and easy to use task manager.</p>
-<a href="https://itunes.apple.com/us/genre/ios/id36?mt=8"><img src="img/btn_store.png"></a>
-
+<section>
+  <h1><a href="https://index.html"><img src="img/logo-taasky.png" alt="Taasky Logo"></a></h1>
+  <hr>
+  <p> Beautiful, simple and easy to use task manager.</p>
+  <a href="https://itunes.apple.com/us/genre/ios/id36?mt=8"><img src="img/btn_store.png" alt="Link to Taasky App Store Page"></a>
+</section>
 
 </body>
 </html>
